--- a/index.html
+++ b/index.html
@@ -7,58 +7,60 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    
+
     <title>Welcome to Ying-Chieh Chen's website</title>
 </head>
 
 <body id="bk">
-    <div class="sticky-menu-container sticky-active" style="display: block; width: auto; margin: auto; position: relative; float: none; left: auto; right: auto; top: auto; bottom: auto; vertical-align:middle;">
-        <div class="main-menu-fixed sticky" style="width: 1499px; top: 0px; bottom: auto; left: 0px; right: auto; position: fixed;">
-            <nav class="nav navbar-default wrapper main-menu">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a href="#Home">Section 1</a>
-                        <li><a href="#">Section 2</a>
-                            <li><a href="#">Section 3</a>
-                </ul>
-            </nav>
+    <div id="main">
+        <div class="sticky-menu-container sticky-active" style="display: block; width: auto; margin: auto; position: relative; float: none; left: auto; right: auto; top: auto; bottom: auto; vertical-align:middle;">
+            <div class="main-menu-fixed sticky" style="width: 1499px; top: 0px; bottom: auto; left: 0px; right: auto; position: fixed;">
+                <nav class="nav navbar-default wrapper main-menu">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#Home">Section 1</a>
+                            <li><a href="#">Section 2</a>
+                                <li><a href="#">Section 3</a>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
-    <br/>
-    <div id="Home">
-        <img src="me.jpg" height="200dp">
-        <h1>Ying-Chieh Chen</h1>
-        <h2>Summary</h2>
-        <p class="summary-text">Hi! I'm Ying-Chieh Chen and this is my website.</p>
-        <h2>Interests</h2>
-        <ul>
-            <li>Sports</li>
-            <li>Movies</li>
-            <li>Board games</li>
-        </ul>
-        <h2>Contact me</h2>
-        <div class="contact">
-            <form>
-                <input type="text" placeholder="Type your message">
-                <input type="submit" value="Send">
-            </form>
+        <br/>
+        <div id="Home">
+            <img src="me.jpg" height="200dp">
+            <h1>Ying-Chieh Chen</h1>
+            <h2>Summary</h2>
+            <p class="summary-text">Hi! I'm Ying-Chieh Chen and this is my website.</p>
+            <h2>Interests</h2>
+            <ul>
+                <li>Sports</li>
+                <li>Movies</li>
+                <li>Board games</li>
+            </ul>
+            <h2>Contact me</h2>
+            <div class="contact">
+                <form>
+                    <input type="text" placeholder="Type your message">
+                    <input type="submit" value="Send">
+                </form>
+            </div>
         </div>
-    </div>
-    <!-- right menu -->
-    <div class="right-link" id="linkedin">
-        <img id="icon" src="linkedin.png" height="20dp"> &nbsp;
-        <a id="link" target="_blank" href="http://www.linkedin.com/in/yingchieh/">LinkedIn</a> &nbsp;
-    </div>
-    <div class="right-link" id="github">
-        <img id="icon" src="github.png" height="20dp"> &nbsp;
-        <a id="link" target="_blank" href="http://github.com/YingChieh">github</a> &nbsp;
-    </div>
-    <div class="right-link" id="email">
-        <img id="icon" src="gmail.png" height="20dp"> &nbsp;
-        <a id="link" target="_blank" href="mailto:lycajdl@gmail.com">Contact Me</a> &nbsp;
-    </div>
-    <!-- right menu -->
+        <!-- right menu -->
+        <div class="right-link" id="linkedin">
+            <img id="icon" src="linkedin.png" height="20dp"> &nbsp;
+            <a id="link" target="_blank" href="http://www.linkedin.com/in/yingchieh/">LinkedIn</a> &nbsp;
+        </div>
+        <div class="right-link" id="github">
+            <img id="icon" src="github.png" height="20dp"> &nbsp;
+            <a id="link" target="_blank" href="http://github.com/YingChieh">github</a> &nbsp;
+        </div>
+        <div class="right-link" id="email">
+            <img id="icon" src="gmail.png" height="20dp"> &nbsp;
+            <a id="link" target="_blank" href="mailto:lycajdl@gmail.com">Contact Me</a> &nbsp;
+        </div>
+        <!-- right menu -->
 
-    <h6>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="freepik">freepik</a> and <a href="https://www.flaticon.com/authors/roundicons" title="roundicons">roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></h6>
+        <h6>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="freepik">freepik</a> and <a href="https://www.flaticon.com/authors/roundicons" title="roundicons">roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></h6>
+    </div>
 </body>
 
 </html>
